# linux-perf-data

./: Cargo.toml  README.md
examples/: jitdump_to_json.rs  jitdumpdump.rs  perfdatainfo.rs  perfpipeinfo.rs
src/: auxtrace.rs  build_id_event.rs  constants.rs  decompression.rs  dso_info.rs  dso_key.rs  error.rs  feature_sections.rs  features.rs  file_reader.rs  flag_feature.rs  flag_sections.rs  header.rs  lib.rs  perf_file.rs  record.rs  section.rs  simpleperf.rs  sorter.rs  thread_map.rs
src/jitdump/: buffered_reader.rs  error.rs  header.rs  jitdump_reader.rs  mod.rs  read_exact.rs  record.rs  records.rs
tests/: compressed.rs  compressed2.rs  compression_e2e.rs  uncompressed.rs
tests/fixtures/: README.md  fibo.compressed2.pipe.data  sleep.compressed.data  sleep.compressed.pipe.data  sleep.compressed2.pipe.data  sleep.data  sleep_compressed.data
