[package]
name = "linux-perf-data"
version = "0.4.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Markus Stange <mstange.moz@gmail.com>"]
categories = ["development-tools::profiling", "parser-implementations"]
description = "A parser for the perf.data format. This format is emitted by the Linux perf tool."
keywords = ["linux", "perf", "parser"]
readme = "Readme.md"
documentation = "https://docs.rs/linux-perf-data/"
repository = "https://github.com/mstange/linux-perf-data/"
exclude = ["/.github", "/.vscode", "/tests"]

[dependencies]
byteorder = "1.4.3"
memchr = "2.4.1"
thiserror = "1.0.30"
linux-perf-event-reader = "0.4.0"
# linux-perf-event-reader = { path = "../linux-perf-event-reader" }
linear-map = "1.2.0"
