[package]
name = "linux-perf-data"
version = "0.11.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Markus Stange <mstange.moz@gmail.com>"]
categories = ["development-tools::profiling", "parser-implementations"]
description = "A parser for the perf.data format and the jitdump format. These formats are used by the Linux perf tool."
keywords = ["linux", "perf", "parser"]
readme = "README.md"
documentation = "https://docs.rs/linux-perf-data/"
repository = "https://github.com/mstange/linux-perf-data/"
exclude = ["/.github", "/.vscode", "/tests"]

[dependencies]
byteorder = "1.4.3"
memchr = "2.4.1"
thiserror = "2"
linux-perf-event-reader = "0.10.0"
# linux-perf-event-reader = { path = "../linux-perf-event-reader" }
linear-map = "1.2.0"
prost = { version = "0.14", default-features = false, features = ["std"] }
prost-derive = "0.14"

[dev-dependencies]
yaxpeax-arch = { version = "0.3", default-features = false }
yaxpeax-x86 = { version = "2", default-features = false, features = ["std", "fmt"] }
yaxpeax-arm = { version = "0.3", default-features = false, features = ["std"] }
